Backup client works with transaction protocol
Backup tool works over transaction protocol
CC (core, RR) have the backup protocol disabled PERMANENTLY (switching option won't change anything)
HA backup protocol still supported as it had before